# MetalSloth

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  imgui.ini
MetalTest/: main.cpp  mtl_engine.cpp  mtl_engine.hpp
MetalTest.xcodeproj/: project.pbxproj
MetalTest.xcodeproj/xcshareddata/xcschemes/: MetalTest.xcscheme
MetalTest.xcodeproj/xcuserdata/mac.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MetalTest.xcodeproj/xcuserdata/mac.xcuserdatad/xcschemes/: xcschememanagement.plist
MetalTest/shaders/: triangle.metal
assets/donut/: donut.mtl
src/: camera.cpp  camera.hpp  component_manager.cpp  component_manager.hpp  entity.cpp  entity.hpp  glfw_bridge.hpp  glfw_bridge.mm  main.cpp  mtl_engine.cpp  mtl_engine.hpp  mtl_implementation.cpp  mtl_rendering_system.cpp  mtl_rendering_system.hpp  physics_engine.cpp  physics_engine.hpp  sloth_engine.cpp  sloth_engine.hpp  texture.cpp  texture.hpp  vertex_data.h
src/component_types/: mesh_component.cpp  mesh_component.hpp
src/shaders/: cube.metal  triangle.metal
